--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 
-  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css" rel="stylesheet" integrity="sha384-C++cugH8+Uf86JbNOnQoBweHHAe/wVKN/mb0lTybu/NZ9sEYbd+BbbYtNpWYAsNP" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-C++cugH8+Uf86JbNOnQoBweHHAe/wVKN/mb0lTybu/NZ9sEYbd+BbbYtNpWYAsNP" crossorigin="anonymous">
 
   <style>
     body {
@@ -195,7 +196,6 @@
       background: #4CAF50;
       cursor: pointer;
     }
-
   </style>
 </head>
 
@@ -203,39 +203,45 @@
 
   <div class="container-fluid">
 
-  <h1>Generation Lockdown: School Shootings in the United States from Columbine to the Present</h1>
+    <h1>Generation Lockdown: School Shootings in the United States from Columbine to the Present</h1>
 
-  <div id='map'></div>
+    <div id='map'></div>
 
-  <div id="ui" class="dropdown">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      All Other Attacks
-    </a>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"></div>
-  </div>
+    <div id="ui" class="dropdown">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        All Other Attacks
+      </a>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"></div>
+    </div>
 
-  <!-- ui slider -->
-  <div class='slidecontainer'>
-    <input type='range' min="1" max="8" value="1" step="1" class="slider" id='slider'>
-  </div>
+    <!-- ui slider -->
+    <div class='slidecontainer'>
+      <input type='range' min="1" max="8" value="1" step="1" class="slider" id='slider'>
+    </div>
 
-  <!-- ui grade -->
-  <div id='grade' class='bg-white round px12 py12 relative'>
-    <h3 class='grade-lable txt-bold'></h3>
-  </div>
+    <!-- ui grade -->
+    <div id='grade' class='bg-white round px12 py12 relative'>
+      <h3 class='grade-lable txt-bold'></h3>
+    </div>
 
-  <section id="about">
-    <h2>Mass Shootings</h2>
-    <p>Over the last generation we've seen school shootings become a thing. Within the span of most of our memories they have gone from an unspeakable tragedy to well discussed (but still tragic) feature of our society. But perhaps they are on the way out, most likely to be replaced by another form of violent expression.</p>
-    <p>Map authored by <a href="https://geography.as.uky.edu/users/oaab222">Osama Abdl-Haleem</a>.</p>
-  </section>
-</div> <!-- end .container-fluid -->
+    <section id="about">
+      <h2>Mass Shootings</h2>
+      <p>Over the last generation we've seen school shootings become a thing. Within the span of most of our memories
+        they have gone from an unspeakable tragedy to well discussed (but still tragic) feature of our society. But
+        perhaps they are on the way out, most likely to be replaced by another form of violent expression.</p>
+      <p>Map authored by <a href="https://geography.as.uky.edu/users/oaab222">Osama Abdl-Haleem</a>.</p>
+    </section>
+  </div> <!-- end .container-fluid -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
   </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
 
   <script src="https://d3js.org/d3.v5.js"></script>
@@ -343,7 +349,9 @@
       // applies event listeners to our polygons for user interaction
       schools.on('mouseover', (d, i, nodes) => { // when mousing over an element
           d3.select(nodes[i]).classed('hover', true); // select it, add a class name
-          tooltip.classed('invisible', false).html("<b>" + d.school_name + "</b>" + "<br>" + d.date + "<br>Killed: " + d.killed + "<br>Injured: " + d.injured + "<br><b>Total Casualties:</b> " + d.casualties) // make tooltip visible and update info
+          tooltip.classed('invisible', false).html("<b>" + d.school_name + "</b>" + "<br>" + d.date + "<br>Killed: " +
+              d.killed + "<br>Injured: " + d.injured + "<br><b>Total Casualties:</b> " + d.casualties
+              ) // make tooltip visible and update info
         })
         .on('mouseout', (d, i, nodes) => { // when mousing out of an element
           d3.select(nodes[i]).classed('hover', false) // remove the class from the polygon
@@ -353,7 +361,9 @@
       // applies event listeners to our polygons for user interaction
       otherShootings.on('mouseover', (d, i, nodes) => { // when mousing over an element
           d3.select(nodes[i]).classed('hover', true); // select it, add a class name
-          tooltip.classed('invisible', false).html("<b>" + d.CASE + "</b>" + "<br>" + d.DATE + "<br>Killed: " + d.FATALITIES + "<br>Injured: " + d.WOUNDED + "<br><b>Total Casualties:</b> " + d.TOTALVICTIMS) // make tooltip visible and update info
+          tooltip.classed('invisible', false).html("<b>" + d.CASE + "</b>" + "<br>" + d.DATE + "<br>Killed: " + d
+              .FATALITIES + "<br>Injured: " + d.WOUNDED + "<br><b>Total Casualties:</b> " + d.TOTALVICTIMS
+              ) // make tooltip visible and update info
         })
         .on('mouseout', (d, i, nodes) => { // when mousing out of an element
           d3.select(nodes[i]).classed('hover', false) // remove the class from the polygon
@@ -368,7 +378,7 @@
       var uniqueTypes = [];
 
       // loop through all features and push unique types to array
-      otherShootingsData.forEach(function(otherShootings) {
+      otherShootingsData.forEach(function (otherShootings) {
         if (!uniqueTypes.includes(otherShootings.LOCATIONTYPE)) {
           uniqueTypes.push(otherShootings.LOCATIONTYPE);
         }
