--- a/data/index.html
+++ b/data/index.html
@@ -1,43 +1,150 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset=utf-8 />
+  <title>School Shootings</title>
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link rel='icon' href='data/compass3.png' type='image/x-icon' />
 
-  <title>Greenhouse Emissions</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
 
-  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css" rel="stylesheet" integrity="sha384-C++cugH8+Uf86JbNOnQoBweHHAe/wVKN/mb0lTybu/NZ9sEYbd+BbbYtNpWYAsNP" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
+
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cerulean/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-C++cugH8+Uf86JbNOnQoBweHHAe/wVKN/mb0lTybu/NZ9sEYbd+BbbYtNpWYAsNP" crossorigin="anonymous">
+
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Quicksand', sans-serif;
+      font-size: 100%;
+      color: #3d3d3d;
+    }
+
+    h1 {
+      position: relative;
+      margin-top: 0;
+      top: 10px;
+      left: 15px;
+      font-size: 1.5em;
+      font-family: 'Quicksand', sans-serif;
+      font-weight: 700;
+      letter-spacing: .04em;
+      padding: 10px 15px;
+      /* Add styles to match Leaflet UI elements */
+      background: rgba(256, 256, 256, .4);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      z-index: 800;
+      text-align: center;
+    }
+
+    h2 {
+      font-family: 'Quicksand', sans-serif;
+      font-size: 1.2em;
+      letter-spacing: .04em;
+
+    }
+
     #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
       width: 100%;
-      height: calc(40vh);
     }
 
     #about {
-      max-height: calc(80vh);
-      overflow-y: scroll;
-    }
-
-    .legend circle {
-      fill: none;
-      stroke: #ccc;
-    }
-
-    .legend text {
-      fill: #777;
-      font: 10px sans-serif;
-      text-anchor: middle;
+      position: absolute;
+      bottom: 20px;
+      left: 15px;
+      width: 280px;
+      padding: 0 15px;
+      /* Add styles to match Leaflet UI elements */
+      background: rgba(256, 256, 256, .6);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      z-index: 800;
     }
 
     #ui {
-      position: absolute;
-      right: 1em;
-      top: 1em;
+      position: relative;
+      top: 20px;
+      right: 15px;
+    }
+
+    #button {
+      position: relative;
+      top: 20px;
+      right: 15px;
+    }
+
+    #slider {
+      position: relative;
+      top: 80px;
+      left: 15px;
+    }
+
+    p {
+      font-size: .9em;
+      line-height: 1.5em;
+    }
+
+    a {
+      color: #005daa;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Leaflet popup styles */
+    .leaflet-popup-content {
+      font-family: 'Quicksand', sans-serif;
+      font-size: 1.1em;
+    }
+
+    /*
+		When browser is 900px high or less
+		make the font a little smaller.
+		 */
+    @media screen and (max-height: 400px) {
+
+      #about p,
+      #about h2 {
+        font-size: .6em;
+      }
+
+      h1 {
+        font-size: 1.2em;
+      }
+
+      #about h2 {
+        font-size: 1em;
+      }
+
+      .leaflet-popup-content {
+        font-family: 'Quicksand', sans-serif;
+        font-size: 0.9em;
+      }
+    }
+
+    /* Don't display info block when window is very small */
+    @media screen and (max-height: 200px) {
+
+      #about {
+        display: none;
+      }
     }
 
     .state {
-      fill: #61aab6;
+      fill: #808080;
       stroke: whitesmoke;
       stroke-width: .7;
     }
@@ -67,7 +174,7 @@
     /* slider ui */
     .slider {
       -webkit-appearance: none;
-      width: 25%;
+      width: 20%;
       height: 15px;
       border-radius: 5px;
       background: #d3d3d3;
@@ -84,7 +191,7 @@
       width: 25px;
       height: 25px;
       border-radius: 50%;
-      background: #4CAF50;
+      background: #FFA500;
       cursor: pointer;
     }
 
@@ -92,87 +199,60 @@
       width: 25px;
       height: 25px;
       border-radius: 50%;
-      background: #4CAF50;
+      background: #FFA500;
       cursor: pointer;
-    }
-
-
-    /* Small devices (landscape phones, 576px and up) */
-    @media (min-width: 576px) {}
-
-    /* Medium devices (tablets, 768px and up) */
-    @media (min-width: 768px) {
-      #map {
-        height: calc(60vh);
-      }
-    }
-
-    /* Large devices (desktops, 992px and up) */
-    @media (min-width: 992px) {
-
-      #map {
-        height: calc(80vh);
-      }
     }
   </style>
 </head>
 
 <body>
+
   <div class="container-fluid">
-    <header class="row py-2 bg-dark text-success">
-      <div class="col mx-2">
-        <h1 class="h1">Generation Lockdown: School Shootings in the United States since Columbine</h1>
-      </div>
-    </header>
 
-    <section class="row bg-secondary ">
-      <div class="col-12 px-0">
-        <div id="map" class="bg-light position-relative">
+  <h1>Generation Lockdown: School Shootings in the United States from Columbine to the Present</h1>
 
-          <div id="ui" class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              All Other Attacks
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"></div>
-          </div>
+  <div id='map'>
 
-          <!-- ui slider -->
-          <div class='slidecontainer'>
-            <input type='range' min="1" max="8" value="1" step="1" class="slider" id='slider'>
-          </div>
+  <button id="button" type="button" class="btn btn-warning">Show all</button>
 
-          <!-- ui grade -->
-          <div id='grade' class='bg-white round px12 py12 relative'>
-            <h3 class='grade-lable txt-bold'></h3>
-          </div>
+  <div id="ui" class="dropdown">
+    <a class="btn btn-warning dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      All Other Attacks
+    </a>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"></div>
+  </div>
 
-        </div>
-      </div>
+  <!-- ui slider -->
+  <div class='slidecontainer'>
+    <input type='range' min="1" max="8" value="1" step="1" class="slider" id='slider'>
+  </div>
 
-    </section>
-    <footer class="row bg-dark text-white py-3">
-      <div class="col mx-2">
-        <ul class="list-unstyled">
-          <li>Map authored by <a href="https://oabdlhaleem.github.io/">Osama Abdl-Haleem</a></li>
-          <li>data sourced from
-            <a href="https://www.census.gov/geo/maps-data/data/tiger-cart-boundary.html">Cartographic Boundary Files</a>
-            and the
-            <a href="https://www.epa.gov/air-emissions-inventories/emissions-inventory-system-eis-gateway">EPA Air
-              Emissions Inventories</a></li>
-        </ul>
-      </div>
-    </footer>
-  </div> <!-- end .container-fluid -->
+  <!-- ui grade -->
+  <div id='grade' class='bg-white round px12 py12 relative'>
+    <h3 class='grade-lable txt-bold'></h3>
+  </div>
+
+  </div>
+
+  <section id="about">
+    <h2>Mass Shootings</h2>
+    <p>Over the last generation we've seen school shootings become a thing. Within the span of most of our memories they have gone from an unspeakable tragedy to well discussed (but still tragic) feature of our society. But perhaps they are on the way out, most likely to be replaced by another form of violent expression.</p>
+    <p>Map authored by <a href="https://geography.as.uky.edu/users/oaab222">Osama Abdl-Haleem</a>.</p>
+  </section>
+</div> <!-- end .container-fluid -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
   </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
 
   <script src="https://d3js.org/d3.v5.js"></script>
   <script src="https://unpkg.com/topojson@3"></script>
+
   <script>
     // JavaScript
 
@@ -275,7 +355,9 @@
       // applies event listeners to our polygons for user interaction
       schools.on('mouseover', (d, i, nodes) => { // when mousing over an element
           d3.select(nodes[i]).classed('hover', true); // select it, add a class name
-          tooltip.classed('invisible', false).html("<b>" + d.school_name + "</b>" + "<br>" + d.date + "<br>Killed: " + d.killed + "<br>Injured: " + d.injured + "<br><b>Total Casualties:</b> " + d.casualties) // make tooltip visible and update info
+          tooltip.classed('invisible', false).html("<b>" + d.school_name + "</b>" + "<br>" + d.date + "<br>Killed: " +
+              d.killed + "<br>Injured: " + d.injured + "<br><b>Total Casualties:</b> " + d.casualties
+              ) // make tooltip visible and update info
         })
         .on('mouseout', (d, i, nodes) => { // when mousing out of an element
           d3.select(nodes[i]).classed('hover', false) // remove the class from the polygon
@@ -285,7 +367,9 @@
       // applies event listeners to our polygons for user interaction
       otherShootings.on('mouseover', (d, i, nodes) => { // when mousing over an element
           d3.select(nodes[i]).classed('hover', true); // select it, add a class name
-          tooltip.classed('invisible', false).html("<b>" + d.CASE + "</b>" + "<br>" + d.DATE + "<br>Killed: " + d.FATALITIES + "<br>Injured: " + d.WOUNDED + "<br><b>Total Casualties:</b> " + d.TOTALVICTIMS) // make tooltip visible and update info
+          tooltip.classed('invisible', false).html("<b>" + d.CASE + "</b>" + "<br>" + d.DATE + "<br>Killed: " + d
+              .FATALITIES + "<br>Injured: " + d.WOUNDED + "<br><b>Total Casualties:</b> " + d.TOTALVICTIMS
+              ) // make tooltip visible and update info
         })
         .on('mouseout', (d, i, nodes) => { // when mousing out of an element
           d3.select(nodes[i]).classed('hover', false) // remove the class from the polygon
@@ -300,7 +384,7 @@
       var uniqueTypes = [];
 
       // loop through all features and push unique types to array
-      otherShootingsData.forEach(function(otherShootings) {
+      otherShootingsData.forEach(function (otherShootings) {
         if (!uniqueTypes.includes(otherShootings.LOCATIONTYPE)) {
           uniqueTypes.push(otherShootings.LOCATIONTYPE);
         }
@@ -340,6 +424,7 @@
       }
     } // end filterByAttribute function
   </script>
+
 </body>
 
 </html>
