--- a/index1.html
+++ b/index1.html
@@ -31,9 +31,13 @@
       top: 1em;
     }
 
+    #locationType {
+
+    }
+
     .state {
       fill: maroon;
-      stroke: #670909;
+      stroke: black;
       stroke-width: .7;
     }
 
@@ -133,26 +137,32 @@
 
           <hr class="my-4">
 
-          <div class="form-group">
-            <h6 class="h6 text-dark">Filter by Location</h6>
+          <div id="locationType">
+            <h6 class="h6 text-dark">Location Type</h6>
             <div class="custom-control custom-checkbox">
               <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
               <label class="custom-control-label" for="customCheck1"> custom checkbox</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input" id="customCheck2" checked="">
-              <label class="custom-control-label" for="customCheck2"> custom checkbox</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input" id="customCheck3" checked="">
-              <label class="custom-control-label" for="customCheck3"> custom checkbox</label>
             </div>
           </div>
 
           <hr class="my-4">
 
           <div class="form-group">
-            <h6 class="h6 text-dark">Filter by Attack</h6>
+            <h6 class="h6 text-dark">Attack Type</h6>
+            <div class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="customCheck0" checked="">
+              <label class="custom-control-label" for="customCheck1"> custom checkbox</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="customCheck2" checked="">
+              <label class="custom-control-label" for="customCheck2"> custom checkbox</label>
+            </div>
+          </div>
+
+          <hr class="my-4">
+
+          <div class="form-group">
+            <h6 class="h6 text-dark">Shooter Race</h6>
             <div class="custom-control custom-checkbox">
               <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
               <label class="custom-control-label" for="customCheck1"> custom checkbox</label>
@@ -160,10 +170,6 @@
             <div class="custom-control custom-checkbox">
               <input type="checkbox" class="custom-control-input" id="customCheck2" checked="">
               <label class="custom-control-label" for="customCheck2"> custom checkbox</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input" id="customCheck3" checked="">
-              <label class="custom-control-label" for="customCheck3"> custom checkbox</label>
             </div>
           </div>
 
@@ -198,7 +204,7 @@
             <h3 class='grade-lable txt-bold'></h3>
           </div>
 
-          <button id='button' type="button" class="btn btn-warning">Location</button>
+          <button id='button' type="button" class="btn btn-warning">Show by Casualties</button>
 
         </div>
       </div>
@@ -297,31 +303,6 @@
         })
         .attr('r', 5)
         .attr('class', 'locations') // give each circle a class name
-        .classed('invisible', false)
-
-      // define radius generator
-      const radius = d3.scaleSqrt().domain([3, 604]).range([0, 100]);
-
-      const killCounts = svg.append('g') // append new g element
-        .selectAll('circle') // select all the circles
-        .data(shootingsData.sort(function(a, b) {
-          return b.casualties - a.casualties; // place the large ones on the bottom
-        })) // use the facility CSV data
-        .join('circle') // join that data to circle elements
-        .attr('cx', d => { // feed the long/lat to the projection generator
-          d.position = projection([d.long, d.lat]); // create a new data attribute
-          return d.position[0]; // position the x
-        })
-        .attr('cy', d => {
-          return d.position[1]; // position the y
-        })
-        .attr('r', d => {
-          return radius(d.casualties); // define the radius
-        })
-        .attr('class', 'casualties') // give each circle a class name
-        .style('opacity', .7)
-        .style('stroke', 'yellow')
-        .classed('invisible', true)
 
       // Create  div for the tooltip and hide with opacity
       const tooltip = d3.select('.container-fluid').append('div')
@@ -345,28 +326,35 @@
           tooltip.classed('invisible', true) // hide the element
         });
 
-      changeSymbology(killCounts, locations);
-      filterByAttribute(shootingsData, locations);
+      changeSymbology(locations);
+
+      filterLocations(shootingsData, locations);
     } // end drawMap
 
-    function changeSymbology(killCounts, locations) {
-      d3.select('#button').on('click', changeTheme(killCounts, locations));
+    function changeSymbology(locations) {
+      d3.select('#button').on('click', changeTheme);
+
+      // define radius generator
+      const radius = d3.scaleSqrt().domain([3, 604]).range([0, 150]);
+
+      function changeTheme() {
+        if (d3.select('#button').html() === 'Show by Casualties') {
+          d3.select('#button').html('Show by Location');
+          locations.attr('r', d => {
+              return radius(d.casualties); // define the radius
+            })
+          .attr('class', 'casualties') // give each circle a class name
+          .style('opacity', .7)
+        } else {
+          d3.select('#button').html('Show by Casualties');
+          locations.attr('r', 5)
+          .attr('class', 'locations') // give each circle a class name
+          .style('opacity', 1)
+        }
+      }
     }
 
-    function changeTheme(killCounts, locations) {
-      if (d3.select('#button').html() === 'Location') {
-        d3.select('#button').html('Casualties');
-        killCounts.classed('invisible', false);
-        locations.classed('invisible', true);
-      }
-      else {
-        d3.select('#button').html('Location');
-        killCounts.classed('invisible', true);
-        locations.classed('invisible', false);
-      }
-    }
-
-    function filterByAttribute(shootingsData, locations) {
+    function filterLocations(shootingsData, locations) {
       // array to hold select options
       var uniqueTypes = [];
 
@@ -409,7 +397,55 @@
 
         d3.select('#ui > a').html(val); // update the UI with current val
       }
-    } // end filterByAttribute function
+    } // end filterLocations function
+
+    function filterLocationType(shootingsData, locations) {
+      // array to hold select options
+      var uniqueTypes = [];
+
+      // loop through all features and push unique types to array
+      shootingsData.forEach(function(locations) {
+        if (!uniqueTypes.includes(locations.locationType)) {
+          uniqueTypes.push(locations.locationType);
+        }
+      });
+
+      // sort strings alphabetically
+      uniqueTypes.sort();
+
+      // add an all facilities to the beginning
+      uniqueTypes.unshift('All Attacks');
+
+      d3.select('#locationType').html('This Works');
+
+      // select all the options (that don't exist yet)
+      d3.select('#customCheck1').selectAll('a')
+        .data(uniqueTypes) // use array as data
+        .join('a') // append a new option element for each data item
+        .text(d => {
+          return d // use the item as text
+        })
+        .attr('value', d => {
+          return d // use the time as value attribute
+        })
+        .attr('href', '#')
+        .classed('dropdown-item', true)
+        .on('click', onchange); // when the user clicks call onchange function
+
+      function onchange() {
+        // get the currently selected value
+        let val = d3.select(this).attr('value');
+
+        // change the display property for each circle
+        locations.style('display', d => {
+          if (val === 'All Attacks') return 'inline';
+          if (d.locationType != val) return 'none';
+        });
+
+        d3.select('#ui > a').html(val); // update the UI with current val
+      }
+    } // end filterLocationType()
+
   </script>
 </body>
 
