--- a/index1.html
+++ b/index1.html
@@ -415,7 +415,7 @@
             })
           }
         })
-      }
+      } //end update() function
 
       // When a button changes, run the update function
       d3.selectAll(".custom-control-input").on("change", update);
