--- a/index1.html
+++ b/index1.html
@@ -18,12 +18,12 @@
       max-height: calc(80vh);
       overflow-y: scroll;
     }
-
+/*
     #ui {
       position: absolute;
       right: 1em;
       top: 4em;
-    }
+    } */
 
     #button {
       position: absolute;
@@ -31,11 +31,11 @@
       top: 1em;
     }
 
-    #slider {
-      position: absolute;
+    /* #slider {
+      position: relative;
       right: 1em;
       bottom: 1em;
-    }
+    } */
 
     .state {
       fill: maroon;
@@ -67,7 +67,8 @@
 
     /* slider ui */
     .slider {
-      /* -webkit-appearance: none; */
+      -webkit-appearance: none;
+      position: relative;
       width: 25%;
       height: 15px;
       border-radius: 5px;
@@ -75,13 +76,20 @@
       outline: none;
       opacity: 0.7;
       cursor: pointer;
-      /* -webkit-transition: .2s;
-      transition: opacity .2s; */
+      -webkit-transition: .2s;
+      transition: opacity .2s;
     }
 
     .slider:hover {
       opacity: 1;
     }
+/*
+    .slider-handle.custom::before {
+	line-height: 20px;
+	font-size: 20px;
+	content: '\2605';
+	color: #726204;
+} */
 
     /* .slider-handle {
       width: 25px;
@@ -124,7 +132,7 @@
   <div class="container-fluid">
     <header class="row py-2 bg-warning text-white">
       <div class="col mx-2">
-        <h1 class="h1">Generation Lockdown: A Map of Mass Shootings</h1>
+        <h1 class="h2">Generation Lockdown: A Map of Mass Shootings</h1>
       </div>
     </header>
 
@@ -132,7 +140,7 @@
 
       <aside id="about" class="col-12 col-md-4 col-lg-3 text-dark py-2">
         <section>
-          <h2 class="h2 text-dark">This is a map</h2>
+          <h2 class="h3 text-dark">This is a map</h2>
           <p>Over the last generation we've seen mass shootings become a thing. Within the span of most of our memories they have gone from an unspeakable tragedy to a well discussed (but still tragic) feature of our society.</p>
 
           <hr class="my-4">
@@ -183,16 +191,17 @@
           </div> -->
 
           <!-- ui slider -->
-          <div class='slidecontainer px-2 py-3'>
-            <input id="ex6" type="text" data-slider-min="1982" data-slider-max="2019" data-slider-step="1" data-slider-value="1982" />
-            <span id="ex6CurrentSliderValLabel">Year: <span id="ex6SliderVal">1982</span></span>
-          </div>
+          <div class='slidecontainer position-relative px-2 py-3'>
+            <input id="ex6" type="range" data-slider-min="1982" data-slider-max="2019" data-slider-step="1" data-slider-value="1982" />
+            <p id="ex6CurrentSliderValLabel">All Attacks up to: <span id="ex6SliderVal">1982</span></p>
 
+            <input id="ex7" type="range" data-slider-min="1982" data-slider-max="2019" data-slider-step="1" data-slider-value="1982" />
+            <p id="ex7CurrentSliderValLabel">Attacks in: <span id="ex7SliderVal">1982</span></p>
 
-
-          <!-- ui grade -->
-          <div id='grade' class='bg-white round px12 py12 relative'>
-            <h3 class='grade-lable txt-bold'></h3>
+            <!-- <div>
+              <input type="range" id="ex6" name="volume" min="1982" max="2019" data-slider-step="1" data-slider-value="1982" />
+              <br><b id="ex6CurrentSliderValLabel">Year: <span id="ex6SliderVal">1982</span></b>
+            </div> -->
           </div>
 
           <button id='button' type="button" class="btn btn-warning">Show by Casualties</button>
@@ -228,12 +237,6 @@
   <script src="https://unpkg.com/topojson@3"></script>
   <script>
     // JavaScript
-
-    // Without JQuery
-var slider = new Slider("#ex6");
-slider.on("slide", function(sliderValue) {
-	document.getElementById("ex6SliderVal").textContent = sliderValue;
-});
 
     // asynchronous calls to data files
     const statesJson = d3.json('data/us-states.json');
@@ -287,6 +290,9 @@ slider.on("slide", function(sliderValue) {
         .attr('d', path) // make new d attribute for sbg paths
         .attr('class', 'state'); // give each path an attribute name of state for css styling
 
+      // define color generator
+      const color = d3.scaleOrdinal(d3.schemeSet1);
+
       // add and style circle
       const locations = svg.append('g') // append new g element
         .selectAll('circle') // select all the circles
@@ -303,6 +309,9 @@ slider.on("slide", function(sliderValue) {
         })
         .attr('r', 5)
         .attr('class', 'locations') // give each circle a class name
+        .style('fill', d => {
+          return color(d.locationType);
+        })
 
       // Create  div for the tooltip and hide with opacity
       const tooltip = d3.select('.container-fluid').append('div')
@@ -411,24 +420,24 @@ slider.on("slide", function(sliderValue) {
       function update() {
 
         // For each checkbox:
-        d3.selectAll(".custom-control-input").on("change", function() {
+        d3.selectAll(".custom-control-input").on("change", function() { //select all the check boxes, when any of them is changed execute the functions
 
-          var checkBox = d3.select(this);
-          var checkBoxName = checkBox.property("id");
+          var checkBox = d3.select(this); //get the check box that was changed
+          var checkBoxName = checkBox.property("id"); //get the name of that check box
           console.log(checkBoxName)
 
-          if (checkBox.property("checked")) {
-            locations.style('opacity', function(d) {
+          if (checkBox.property("checked")) { // see if that box is checked
+            locations.style('opacity', function(d) { //if yes execute opacity function
               // apply a conditional test
-              if (d.locationType === checkBoxName) {
-                return 1; // return attribute value for dots
+              if (d.locationType === checkBoxName) { //find all locations with that type
+                return 1; // make visible
               }
             })
-          } else {
-            locations.style('opacity', function(d) {
+          } else { //if that box is not checked
+            locations.style('opacity', function(d) { //execute opacity function
               // apply a conditional test
-              if (d.locationType === checkBoxName) {
-                return 0; // return attribute value
+              if (d.locationType === checkBoxName) { //find all locations with that type
+                return 0; // make invisible
               }
             })
           }
@@ -437,11 +446,37 @@ slider.on("slide", function(sliderValue) {
     } // end filterLocationType()
 
     function slideYear(shootingsData, locations) {
-      d3.select(".slider").on("change", changeYear);
 
-      function changeYear() {
-        d3.select(".yearLable").html(slidecontainer)
-      }
+      // add slider 1
+      var slider = new Slider("#ex6");
+      slider.on("slide", function(sliderValue) {
+
+        document.getElementById("ex6SliderVal").textContent = sliderValue;
+
+        locations.style('opacity', function(d) {
+          if (d.year === document.getElementById("ex6SliderVal").textContent || d.year < document.getElementById("ex6SliderVal").textContent) {
+            return 1
+          } else {
+            return 0
+          }
+        })
+      });
+
+      // add slider 2
+      var otherSlider = new Slider("#ex7");
+      otherSlider.on("slide", function(sliderValue) {
+
+        document.getElementById("ex7SliderVal").textContent = sliderValue;
+
+        locations.style('opacity', function(d) {
+          if (d.year === document.getElementById("ex7SliderVal").textContent) {
+            return 1
+          } else {
+            return 0
+          }
+        })
+      });
+
     } // end slideYear()
   </script>
 </body>
